# memento

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  ticket.md
.github/hooks/: pre-commit-pii-check.sh
.github/workflows/: ci.yml  dependabot-auto-merge.yml  security-deep-scan.yml  security-scan.yml
src/: __init__.py  anonymizer.py  audit.py  config.py  database.py  embeddings.py  encryption.py  ingest.py  parser.py  query.py  sanitizer.py
tests/: test_anonymizer.py  test_sanitizer.py
